# helpingwizards

./: ADMIN_IMPLEMENTATION_SUMMARY.md  README.md
AI_features/SpamDetector/: clothes_model.py  clothes_model_api.py  requirements.txt
AI_features/image_search/: main.py  pyproject.toml
Backend/: .env  alembic.ini  app.db  create_admin.py  requirements.txt  rewear.db  test_admin.py  test_backend.py  test_swap_functionality.py
Backend/alembic/: env.py
Backend/alembic/versions/: 4ce7317cd625_add_user_item_fields.py  5e45f5ec8c27_create_swaps_table.py  7dea0e0abade_add_embeddings_to_item.py  7df78b2c0856_add_points_to_user.py  943bb769cbb3_create_swaps_table_properly.py
Backend/app/: main.py
Backend/app/core/: config.py  security.py
Backend/app/crud/: admin.py  item.py  swap.py  user.py
Backend/app/dependencies/: __init__.py  admin.py  deps.py
Backend/app/models/: item.py  swap.py  user.py
Backend/app/schemas/: auth.py  dashboard.py  item.py  swap.py  user.py
Frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
Frontend/src/: App.tsx  index.css
Frontend/src/api/: admin.ts  auth.ts  call.ts  client.ts  index.ts  items.ts  swaps.ts
Frontend/src/components/: AuthModal.tsx  EmptyState.tsx  Footer.tsx  ItemCard.tsx  LoadingSpinner.tsx  Modal.tsx  Navbar.tsx
Frontend/src/constants/: index.ts
Frontend/src/context/: AppContext.tsx
Frontend/src/data/: sampleData.ts
Frontend/src/pages/: AddItem.tsx  AdminPanel.tsx  BrowseItems.tsx  Dashboard.tsx  ItemDetail.tsx  LandingPage.tsx  UserProfile.tsx
(+6 files in other folders)
