[project]
name = "odoo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "fastapi",
    "uvicorn",
    "torch",
    "torchvision",
    "pillow",
    "sqlalchemy",
    "psycopg2-binary",
    "click>=8.2.1",
    "pgvector>=0.4.1",
    "requests>=2.32.4",
]



